--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,35 @@
 executors:
-  docker-publisher:
-    machine: true
+  latest-image:
+    machine:
+      image: ubuntu-2004:202010-01
 jobs:
   build:
-    executor: docker-publisher
+    environment:
+      BUILDX_NO_DEFAULT_LOAD: 1
+    executor: latest-image
     steps:
       - checkout
-      - run:
-          command: ./build.sh
-          name: Build
-      - run:
-          command: ./ci/archive-image.sh ./<< pipeline.parameters.image_archive >>
-          name: Archive Docker image
-      - persist_to_workspace:
-          paths:
-            - ./<< pipeline.parameters.image_archive >>
-            - ./env
-            - ./ci/tag-and-push.sh
-          root: .
+      - command: ./install-binfmt-platforms.sh
+        name: Install binfmt Platforms
+        run: null
+      - command: ./build-multiarch.sh
+        name: Build
+        run: null
   deploy:
-    executor: docker-publisher
+    environment:
+      PUSH: --push
+    executor: latest-image
     steps:
-      - attach_workspace:
-          at: .
-      - run:
-          command: docker load -i "./<< pipeline.parameters.image_archive >>"
-          name: Load archive Docker image
-      - run:
-          command: ./ci/tag-and-push.sh
-          name: Publish Docker Image to Docker Hub
-parameters:
-  image_archive:
-    default: image.tar
-    type: string
+      - command: docker login --username="$DOCKER_USER" --password="$DOCKER_PASS"
+        name: Login to Docker Hub
+        run: null
+      - checkout
+      - command: ./install-binfmt-platforms.sh
+        name: Install binfmt Platforms
+        run: null
+      - command: ./build-multiarch.sh
+        name: Build & Push
+        run: null
 version: 2.1
 workflows:
   build-deploy:
@@ -42,11 +39,11 @@ workflows:
             branches:
               only:
                 - develop
-                - master
+                - /.*-ci/
       - deploy:
           filters:
             branches:
-              only: master
-          requires:
-            - build
+              only:
+                - main
+                - master
   version: 2.1
