--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,27 +9,27 @@ jobs:
     executor: latest-image
     steps:
       - checkout
-      - command: ./install-binfmt-platforms.sh
-        name: Install binfmt Platforms
-        run: null
-      - command: ./build-multiarch.sh
-        name: Build
-        run: null
+      - run:
+          command: ./install-binfmt-platforms.sh
+          name: Install binfmt Platforms
+      - run:
+          command: ./build-multiarch.sh
+          name: Build
   deploy:
     environment:
       PUSH: --push
     executor: latest-image
     steps:
-      - command: docker login --username="$DOCKER_USER" --password="$DOCKER_PASS"
-        name: Login to Docker Hub
-        run: null
+      - run:
+          command: docker login --username="$DOCKER_USER" --password="$DOCKER_PASS"
+          name: Login to Docker Hub
       - checkout
-      - command: ./install-binfmt-platforms.sh
-        name: Install binfmt Platforms
-        run: null
-      - command: ./build-multiarch.sh
-        name: Build & Push
-        run: null
+      - run:
+          command: ./install-binfmt-platforms.sh
+          name: Install binfmt Platforms
+      - run:
+          command: ./build-multiarch.sh
+          name: Build & Push
 version: 2.1
 workflows:
   build-deploy:
