--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REPO=ajslater/codex-wheel-builder
+PLATFORMS=linux/amd64,linux/arm64
 BASE_VERSION=3.9.0-alpine3.12
 PKG_VERSION=1.0.0
 VERSION=python${BASE_VERSION}_${PKG_VERSION}
